fixed height issue for landing page and footer overlapping added soluitionsection basic styling added contact section and basic styling for overal outline

--- a/src/styles/Footer.css
+++ b/src/styles/Footer.css
@@ -3,9 +3,7 @@ footer {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    height: 3rem;
     border: solid 3px blue;
-    /* position: sticky; */
-
+    position: sticky;
     width: 100%;
 }
