--- a/src/styles/landingpage.css
+++ b/src/styles/landingpage.css
@@ -1,5 +1,4 @@
 main {
-  height: 100vh;
   border: 3px solid green;
   width: 100%;
 }
